--- a/Dealership-Inventory/app/src/main/res/layout/card_view_layout.xml
+++ b/Dealership-Inventory/app/src/main/res/layout/card_view_layout.xml
@@ -76,7 +76,7 @@
 
             <TextView
                 android:id="@+id/price"
-                android:layout_width="50dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="start"
                 android:padding="5dp"
