--- a/Dealership-Inventory/app/src/main/res/layout/activity_car_details.xml
+++ b/Dealership-Inventory/app/src/main/res/layout/activity_car_details.xml
@@ -11,33 +11,33 @@
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay">
+<!--        <androidx.appcompat.widget.Toolbar-->
+<!--            android:id="@+id/toolbar"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="?attr/actionBarSize"-->
+<!--            android:background="?attr/colorPrimary"-->
+<!--            app:popupTheme="@style/AppTheme.PopupOverlay">-->
 
-            <TextView
-                android:id="@+id/make"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Honda"
-                android:textColor="#FFFFFF"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+<!--            <TextView-->
+<!--                android:id="@+id/make"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Honda"-->
+<!--                android:textColor="#FFFFFF"-->
+<!--                android:textSize="24sp"-->
+<!--                android:textStyle="bold" />-->
 
-            <TextView
-                android:id="@+id/model"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="25sp"
-                android:text="CRV"
-                android:textColor="#FFFFFF"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+<!--            <TextView-->
+<!--                android:id="@+id/model"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginLeft="25sp"-->
+<!--                android:text="CRV"-->
+<!--                android:textColor="#FFFFFF"-->
+<!--                android:textSize="24sp"-->
+<!--                android:textStyle="bold" />-->
 
-        </androidx.appcompat.widget.Toolbar>
+<!--        </androidx.appcompat.widget.Toolbar>-->
 
 
 
