--- a/Dealership-Inventory/app/src/main/res/layout/card_view_layout.xml
+++ b/Dealership-Inventory/app/src/main/res/layout/card_view_layout.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        app:cardBackgroundColor="#7B1FA2"
+        app:cardBackgroundColor="#DAD43A"
         app:cardCornerRadius="0dp"
         app:cardElevation="5dp"
         app:contentPadding="0dp"
@@ -28,7 +28,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="#DAD43A">
 
             <TextView
                 android:id="@+id/carMake"
