--- a/Dealership-Inventory/app/src/main/res/menu/nav_menu.xml
+++ b/Dealership-Inventory/app/src/main/res/menu/nav_menu.xml
@@ -1,58 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item android:title="General">
-        <menu>
-            <item
-                android:id="@+id/notes"
-                android:icon="@drawable/ic_note_black_dark_24dp"
-                android:title="Notes" />
-            <item
-                android:id="@+id/addNote"
-                android:icon="@drawable/ic_note_add_black_24dp"
-                android:title="Add Note" />
-
-        </menu>
-    </item>
-
-
-
-    <item android:title="Account">
+    <item android:title = "User Authentication">
         <menu>
             <item
                 android:id="@+id/login"
-                android:icon="@drawable/ic_open_in_browser_black_24dp"
-                android:title="Login" />
-
+                android:icon="@drawable/logouticon"
+                android:title="Login"></item>
             <item
                 android:id="@+id/logout"
-                android:icon="@drawable/ic_vpn_key_black_24dp"
-                android:title="Logout" />
-
+                android:icon="@drawable/loginicon"
+                android:title="Logout"></item>
             <item
-                android:id="@+id/register"
-                android:icon="@drawable/ic_vpn_key_black_24dp"
-                android:title="Sign Up / Sync Now" />
-
-            <item
-                android:id="@+id/resetPass"
-                android:icon="@drawable/ic_settings_backup_restore_black_24dp"
-                android:title="Reset Password" />
+                android:id="@+id/signup"
+                android:icon="@drawable/signuplogo"
+                android:title="Sign Up" />
         </menu>
     </item>
-
-    <item android:title="Support">
-        <menu>
-
-            <item
-                android:id="@+id/rating"
-                android:icon="@drawable/ic_star_half_black_24dp"
-                android:title="Rate App" />
-            <item
-                android:id="@+id/shareapp"
-                android:icon="@drawable/ic_share_black_24dp"
-                android:title="Share App" />
-        </menu>
-    </item>
-
 </menu>
