--- a/Dealership-Inventory/app/src/main/res/layout/activity_main.xml
+++ b/Dealership-Inventory/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:theme="@style/AppTheme.NoActionBar">
 
     <include
         layout="@layout/content_main"
