--- a/Dealership-Inventory/app/src/main/res/layout/nav_header.xml
+++ b/Dealership-Inventory/app/src/main/res/layout/nav_header.xml
@@ -7,69 +7,63 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="215dp"
-        android:background="@drawable/cover">
+        android:layout_height="200dp"
+        android:alpha="0.9"
+        android:background="@drawable/headerpic">
 
         <TextView
-            android:id="@+id/mainText"
-            android:layout_width="match_parent"
+            android:id="@+id/navHeaderTitle"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginRight="15dp"
-            android:text="Post It Notes"
-            android:textColor="#7A000000"
-            android:textSize="50sp"
-            android:textStyle="bold|italic"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginRight="24dp"
+            android:alpha="1.0"
+            android:text="Patel Auto Traders"
+            android:textColor="#FFFFFF"
+            android:textSize="36sp"
+            app:fontFamily="sans-serif-smallcaps"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.125"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.087" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/subText"
+            android:id="@+id/navHeaderSubTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Keep It Simple!"
-            android:textColor="#AEFFFFFF"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/mainText"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/mainText"
-            app:layout_constraintTop_toBottomOf="@+id/mainText" />
-
-        <TextView
-            android:id="@+id/userDisplayName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:text="Anonymous User"
-            android:textColor="#0EE2EC"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:text="Find your next dream car"
+            android:textAllCaps="true"
+            android:textColor="#FFFFFF"
             android:textSize="18sp"
-            android:textStyle="bold"
+            app:fontFamily="monospace"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/subText"
-            app:layout_constraintTop_toBottomOf="@+id/subText" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/navHeaderTitle" />
 
         <TextView
-            android:id="@+id/userDisplayEmail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Please Sync Your Notes"
-            android:textColor="#0EE2EC"
+            android:id="@+id/navUsertype"
+            android:layout_width="323dp"
+            android:layout_height="29dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="48dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:text="DummyUser"
+            android:textAllCaps="true"
+            android:textColor="#FFFFFF"
             android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:fontFamily="sans-serif-smallcaps"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/userDisplayName"
-            app:layout_constraintTop_toBottomOf="@+id/userDisplayName"
-            app:layout_constraintVertical_bias="0.0" />
-
+            app:layout_constraintHorizontal_bias="0.464"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/navHeaderSubTitle" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
