--- a/Dealership-Inventory/app/src/main/res/layout/activity_car_details.xml
+++ b/Dealership-Inventory/app/src/main/res/layout/activity_car_details.xml
@@ -47,6 +47,17 @@
     <include layout="@layout/content_car_details" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/deleteCarFloat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|start"
+        android:layout_margin="@dimen/fab_margin"
+        app:backgroundTint="@color/colorPrimaryDark"
+        app:maxImageSize="35dp"
+        app:srcCompat="@drawable/ic_delete_black_24dp"
+        tools:ignore="VectorDrawableCompat" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/editCarFloat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
