--- a/Dealership-Inventory/app/src/main/res/layout/content_main.xml
+++ b/Dealership-Inventory/app/src/main/res/layout/content_main.xml
@@ -29,7 +29,7 @@
         android:id="@+id/carList"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#6AD134"
+        android:background="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
