--- a/Dealership-Inventory/app/src/main/res/layout/nav_header.xml
+++ b/Dealership-Inventory/app/src/main/res/layout/nav_header.xml
@@ -21,9 +21,9 @@
             android:layout_marginEnd="24dp"
             android:layout_marginRight="24dp"
             android:alpha="1.0"
-            android:text="Patel Auto Traders"
+            android:text="436 Auto Traders"
             android:textColor="#FFFFFF"
-            android:textSize="36sp"
+            android:textSize="30sp"
             app:fontFamily="sans-serif-smallcaps"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +55,7 @@
             android:layout_marginTop="48dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
-            android:text="DummyUser"
+            android:text="Welcome User"
             android:textAllCaps="true"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
