--- a/Dealership-Inventory/app/src/main/res/layout/nav_header.xml
+++ b/Dealership-Inventory/app/src/main/res/layout/nav_header.xml
@@ -50,11 +50,12 @@
             android:id="@+id/navUsertype"
             android:layout_width="323dp"
             android:layout_height="29dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
             android:layout_marginTop="48dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
+            android:gravity="center|center_horizontal|center_vertical"
             android:text="Welcome User"
             android:textAllCaps="true"
             android:textColor="#FFFFFF"
